--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 LewongelConnect.zip filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+LewongelConnect[[:space:]]V[[:space:]]0.5.zip filter=lfs diff=lfs merge=lfs -text
